edited the about me paragraph

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,10 +8,9 @@
 <h2>Who am I?</h2>
 
 
-<p>I am Foster Stulen the thrid, yes the thrid as in my dad name was Foster Stulen and my grandfather's name is Foster Stulen. I am currently
-  21 years old as I was borned on Apirl 8th in 1997. I am currently a graduate of the Cincy Code IT .Net Technical Bootcamp, that is looking 
-  for work to further devolop my skills as a Full stack developer in the .Net workshop and over workshops. I am eager to learn and always looking
-  for something new to tackle and bring into my skill set.
+<p>I am Foster Stulen the thrid. I am currently 21 years old as I was borned on Apirl 8th in 1997. I am currently a graduate of the Cincy Code IT .Net 
+  Technical Bootcamp, that is looking for work to further devolop my skills as a Full stack developer in the .Net workshop and over workshops.
+  I am eager to learn and always looking for something new to tackle and bring into my skill set.
 
   I am open to going to different places if there is a case to move somewhere to have a better oppurtunity although I would prefer to stay in
   the Cincinnati area for now, as this is where I am the most familar.
