added a skills list to present on the first page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,3 +19,11 @@
   college route in which students normally get an average of 120 hours of coding in a four year period, the Cincy Code IT bootcamp enabled me
   to have about 500 hours of hands on experience coding experience.
 </p>
+
+<h3>Skills</h3>
+
+<div>
+<li *ngFor="let skill of skills">
+    {{skill}}
+</li>
+</div>
