--- a/src/app/contact-me/contact-me.component.html
+++ b/src/app/contact-me/contact-me.component.html
@@ -1,3 +1,2 @@
-<p>
-  contact-me works!
-</p>
+<h1>Contact Me!</h1>
+<p>You can contact me to inquire possible hiring oppurtunities that I would be more than happy to discuss</p>
